Replicaset.yaml
apiVersion: apps/v1
kind: ReplicaSet
metadata:
  name: tutu-service
  labels:
    app: replicat-set
    toto: tutu
spec:
  replicas: 4
  selector:
    matchLabels:
      toto: tutu
  template:
    metadata:
      labels:
        toto: tutu
    spec:
      containers:
        - name: replica-set
          image: registry.cluster.wik.cloud/public/echo
          env:
           - name: PING_LISTEN_PORT
             value: "8080"
         ports:
         - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: replica-set
spec:
  selector:
    toto: tutu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
