deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: publicecho
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: publicecho
    spec:
      containers:
        - name: deployment
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 60m
              memory: 50Mi
            limits:
              cpu: 60m
              memory: 50Mi


apiVersion: v1
kind: Service
metadata:
  name: deployment-service
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
