ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: part-04
  labels:
    app: publicecho
spec:
  replicas: 4
  selector:
    matchLabels:
      app: publicecho
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: publicecho
    spec:
      containers:
        - name: part-04
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080

apiVersion: v1
kind: Service
metadata:
  name: service-ingress
spec:
  selector:
    app: echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: tp4ops.net
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: service-ingress
                port:
                  number: 8080
